[package]
name = "mint_nft"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
mpl-token-metadata = { git = "https://github.com/metaplex-foundation/mpl-token-metadata", branch = "main" }
solana-client = "1.14.14"
solana-sdk = "1.14.14"
spl-associated-token-account = "3.0.2"
spl-token = "3.0.2"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"